@@ -57,6 +57,7 @@ $DCPSREPO = new PerlACE::Process ("$ENV{DDS_ROOT}/bin/DCPSInfoRepo",
 $Subscriber = new PerlACE::Process ("subscriber", " $sub_opts");
 $Publisher = new PerlACE::Process ("publisher", " $pub_opts");
 
+#print $DCPSREPO->CommandLine() . "\n";
 $DCPSREPO->Spawn ();
 if (PerlACE::waitforfile_timed ($dcpsrepo_ior, 30) == -1) {
     print STDERR "ERROR: waiting for DCPSInfo IOR file\n";
@@ -64,8 +65,10 @@ if (PerlACE::waitforfile_timed ($dcpsrepo_ior, 30) == -1) {
     exit 1;
 }
 
+#print $Publisher->CommandLine() . "\n";
 $Publisher->Spawn ();
 
+#print $Subscriber->CommandLine() . "\n";
 $Subscriber->Spawn ();
 
 
