@@ -1,3 +1,15 @@
+Tue Mar 20 16:47:32 UTC 2007  Ciju John  <johnc@ociweb.com>
+
+        * DevGuideExamples/DDS/Messenger/run_test.pl:
+          Add debug messages.
+
+        * tests/DCPS/BuiltInTopic/main.cpp:
+          Remove empty line.
+
+        * tests/DCPS/Messenger_Imr/run_test.pl:
+          No need for a timed kill. A timed kill produces an error message
+          which threw havoc on the nightly test run.
+
 Tue Mar 20 13:51:51 UTC 2007  Adam Mitz  <mitza@ociweb.com>
 
         * bin/auto_run_tests.pl:
